Index inicial + css + img

--- a/index.html
+++ b/index.html
@@ -7,62 +7,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <h1>Next algo dijiste</h1>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="galeria.html">Camara</a></li>
-                <li><a href="contacto.html">Contactanos</a></li>
-                <li><a href="acerca.html">Acerca de </a></li>
-            </ul>
-        </nav>
-    </header>
+<input type="checkbox" name="checkAvanzar" id="checkAvanzar">
+<label for="checkAvanzar" class="labelBotonAvanzar">
+    <i class="fa fa-navicon" id="btnAvanzar"></i>
+</label>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Conciertos Destacados</h2>
-                <p>Encuentra los mejores eventos y compra tus boletos fácilmente</p>
-                <button class="cta-button">Ver Eventos</button>
-            </div>
-        </section>
+<section id="bienvenida">
+    <div id="unico">
+        <h1>¿LISTO PARA VIVIR TU PROXIMA EXPERIENCIA?</h1>
+    </div>    
+</section>
 
-        <section class="featured-events">
-            <h2>Eventos en Tendencia</h2>
-            <div class="events-grid">
-                <div class="event-card">
-                    <div class="event-image"></div>
-                    <h3> Bad Bunny</h3>
-                    <p>Fecha: Próximamente</p>
-                    <button>Comprar Boletos</button>
-                </div>
-                <div class="event-card">
-                    <div class="event-image"></div>
-                    <h3> Rauw Alejandro/h3>
-                    <p>Fecha: Próximamente</p>
-                    <button>Comprar Boletos</button>
-                </div>
-                <div class="event-card">
-                    <div class="event-image"></div>
-                    <h3> Alvaro Diaz </h3>
-                    <p>Fecha: Próximamente</p>
-                    <button>Comprar Boletos</button>
-                </div>
-                <div class="event-card">
-                    <div class="event-image"></div>
-                    <h3> Omar Courtz </h3>
-                    <p>Fecha: Próximamente</p>
-                    <button>Comprar Boletos</button>
-                </div>
-            </div>
-        </section>
-    </main>
+<section class="inicio">
+    <h1>Bienvenido</h1>
+</section>
 
-    <footer>
-        <p>&copy; 2025 Venta de Boletos de Conciertos. Todos los derechos reservados.</p>
-    </footer>
+
+
+
+    
+
+  <footer>
+    <p> &copy; 2025 NextLab. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
