Parte de acerca y ofertas
Se realizaron las partes de acerca y ofertas de la pagina web

--- a/acerca.html
+++ b/acerca.html
@@ -4,125 +4,148 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de - NextLab</title>
+    <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">NextLab</div>
+            <ul class="nav-menu">
+                <li><a href="index.html" id="inicio">Inicio</a></li>
+                <li><a href="galeria.html" id="galeria">Galeria</a></li>
+                <li><a href="contacto.html" id="contacto">Contacto</a></li>
+                <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
+            </ul>
+        </nav>
+    </header>
     
-    <main>
-        <div>
-            <h1>Acerca de nosotros</h1>
-            <p>
-                Conoce al equipo detrás de NextLab Concerts y nuestra pasión por la música
-            </p>
+    <main class="main-content">
+        <div class="container">
+            <!-- Hero Section -->
+            <section class="hero">
+                <h1>Acerca de nosotros</h1>
+                <p class="hero-subtitle">
+                    Conoce al equipo detrás de NextLab Concerts y nuestra pasión por la música
+                </p>
+            </section>
 
             <!-- Historia -->
-            <div>
-                <h2>Nuestra Historia</h2>
-                <p>
-                    NextLab Concerts nació en 2022 de la pasión por conectar a los amantes de la música con experiencias 
-                    inolvidables. Lo que comenzó como un pequeño proyecto entre amigos, hoy es la plataforma líder en 
-                    venta de boletos para conciertos y eventos en El Salvador.
-                </p>
-            </div>
+            <section class="history-section">
+                <div class="history-card">
+                    <h2>Nuestra Historia</h2>
+                    <p>
+                        NextLab Concerts nació en 2022 de la pasión por conectar a los amantes de la música con experiencias 
+                        inolvidables. Lo que comenzó como un pequeño proyecto entre amigos, hoy es la plataforma líder en 
+                        venta de boletos para conciertos y eventos en El Salvador.
+                    </p>
+                </div>
+            </section>
 
             <!-- Misión, Visión, Valores -->
-            <div>
-                <div>
-                    <h3>Misión</h3>
-                    <p>
-                        Conectar a las personas con experiencias musicales únicas through tecnología innovadora 
-                        y servicio excepcional.
-                    </p>
-                </div>
+            <section class="values-section">
+                <h2 class="section-title">Nuestra Filosofía</h2>
+                <div class="values-grid">
+                    <div class="value-card">
+                        <div class="value-icon">🎯</div>
+                        <h3>Misión</h3>
+                        <p>
+                            Conectar a las personas con experiencias musicales únicas through tecnología innovadora 
+                            y servicio excepcional.
+                        </p>
+                    </div>
 
-                <div>
-                    <h3>Visión</h3>
-                    <p>
-                        Ser la plataforma preferida para experiencias musicales en El Salvador, reconocida por 
-                        nuestra calidad y innovación.
-                    </p>
-                </div>
+                    <div class="value-card">
+                        <div class="value-icon">👁️</div>
+                        <h3>Visión</h3>
+                        <p>
+                            Ser la plataforma preferida para experiencias musicales en El Salvador, reconocida por 
+                            nuestra calidad y innovación.
+                        </p>
+                    </div>
 
-                <div>
-                    <h3>Valores</h3>
-                    <p>
-                        Pasión por la música, innovación constante, servicio al cliente excepcional y compromiso 
-                        con la comunidad.
-                    </p>
+                    <div class="value-card">
+                        <div class="value-icon">💎</div>
+                        <h3>Valores</h3>
+                        <p>
+                            Pasión por la música, innovación constante, servicio al cliente excepcional y compromiso 
+                            con la comunidad.
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Equipo -->
-            <h2>Nuestro Equipo</h2>
-            <div>
-                <!-- Miembro 1 -->
-                <div>
-                    <div>
-                        [Foto]
+            <section class="team-section">
+                <h2 class="section-title">Nuestro Equipo</h2>
+                <div class="team-grid">
+                    <!-- Miembro 1 -->
+                    <div class="team-card">
+                        <div class="member-photo">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Paola Guzmán</h3>
+                        <p class="member-role">CEO & Fundadora</p>
+                        <p class="member-bio">
+                            Apasionada por la música y la tecnología. 
+                        </p>
                     </div>
-                    <h3>Paola Guzmán</h3>
-                    <p>CEO & Fundadora</p>
-                    <p>
-                        Apasionada por la música y la tecnología. 
-                    </p>
-                </div>
 
-                <!-- Miembro 2 -->
-                <div>
-                    <div>
-                        [Foto]
+                    <!-- Miembro 2 -->
+                    <div class="team-card">
+                        <div class="member-photo">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Rodrigo Quijada</h3>
+                        <p class="member-role">Director de Operaciones</p>
+                        <p class="member-bio">
+                            Experto en logística de eventos y gestión de talento. Músico en sus tiempos libres.
+                        </p>
                     </div>
-                    <h3>Rodrigo Quijada</h3>
-                    <p>Director de Operaciones</p>
-                    <p>
-                        Experto en logística de eventos y gestión de talento. Músico en sus tiempos libres.
-                    </p>
-                </div>
 
-                <!-- Miembro 3 -->
-                <div>
-                    <div>
-                        [Foto]
+                    <!-- Miembro 3 -->
+                    <div class="team-card">
+                        <div class="member-photo">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Mauricio Recinos</h3>
+                        <p class="member-role">Desarrollador Web</p>
+                        <p class="member-bio">
+                            Creador de esta plataforma. Amante del código y los conciertos de rock.
+                        </p>
                     </div>
-                    <h3>Mauricio Recinos</h3>
-                    <p>Desarrolladora Web</p>
-                    <p>
-                        Creador de esta plataforma. Amante del código y los conciertos de rock.
-                    </p>
-                </div>
 
-                <!-- Miembro 4 -->
-                <div>
-                    <div>
-                        [Foto]
+                    <!-- Miembro 4 -->
+                    <div class="team-card">
+                        <div class="member-photo">
+                            <img src="" alt="">
+                        </div>
+                        <h3>Francisco Rauda</h3>
+                        <p class="member-role">Community Manager</p>
+                        <p class="member-bio">
+                            Conectando con nuestra comunidad en redes sociales. Fanático del reggaeton.
+                        </p>
                     </div>
-                    <h3>Francisco Rauda</h3>
-                    <p>Community Manager</p>
-                    <p>
-                        Conectando con nuestra comunidad through redes sociales. Fanático del reggaeton.
-                    </p>
                 </div>
-            </div>
-
+            </section>
         </div>
     </main>
 
-    <footer>
-        <div>
-            <div>
-                <div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-info">
                     <h3>NextLab Concerts</h3>
                     <p>Tu plataforma para experiencias musicales inolvidables.</p>
                 </div>
-                <div>
+                <div class="footer-contact">
                     <h4>Contacto</h4>
                     <p>info@nextLab.com<br>+503 2374-5678</p>
                 </div>
             </div>
-            <div>
+            <div class="footer-bottom">
                 <p>&copy; 2025 NextLab Concerts. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
-    
 </body>
 </html>
