--- a/galeria.html
+++ b/galeria.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venta de Boletos de Conciertos</title>
+    <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/galeria.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="encabezado">
+    <header id="encabezado">
         <nav>
             <img src="IMG/logo.png" alt="Logo NextLab" width="200" height="54" id="logo">
             <ul>
@@ -22,8 +23,7 @@
             </ul>
 
         </nav>
-
-    </div>
+    </header>
 
     <section class="contenido">
         <div class="galeria">
@@ -88,7 +88,6 @@
     <footer>
         <p> &copy; 2025 NextLab. Todos los derechos reservados.</p>
     </footer>
-
 </body>
 
 </html>
