--- a/ofertas.html
+++ b/ofertas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ofertas - NextLab</title>
     <link rel="stylesheet" href="css/style2.css">
+     <link rel="stylesheet" href="css/header_footer">
 </head>
 <body>
     <header class="header">
