--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
 <body>
     <header id="encabezado">
         <nav>
-            <img src="IMG/logo.png" alt="Logo NextLab" width="200" height="54" id="logo">
+            <img src="IMG/logo1.png" alt="Logo NextLab" width="200" height="54" id="logo">
             <ul>
                 <li><a href="index.html" id="inicio">Inicio</a></li>
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
