--- a/acerca.html
+++ b/acerca.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de - NextLab</title>
     <link rel="stylesheet" href="css/style1.css">
-    <link rel="stylesheet" href="css/header_footer">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <header class="header">
