--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="CSS/header_footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-<body>
+<body class="dark-theme">
 
     <header id="encabezado">
-    <nav>
+    <nav class="navbar">
             <img src="IMG/logo.png" alt="Logo NextLab" width="200" height="54" id="logo">
             <ul>
                 <li><a href="index.html" id="inicio">Inicio</a></li>
