Actualizo calendario, contacto y galería header y footer

--- a/calendario.html
+++ b/calendario.html
@@ -5,21 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario de Eventos</title>
-    <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/calendario.css">
+    <link rel="stylesheet" href="css/header_footer.css">
 </head>
 
 <body>
-    <header id="encabezado">
-        <nav>
-            <img src="IMG/logo.png" alt="Logo NextLab" width="200" height="54" id="logo">
-            <ul>
+     <header class="header">
+        <nav class="navbar">
+            <div class="logo">NextLab</div>
+            <ul class="nav-menu">
                 <li><a href="index.html" id="inicio">Inicio</a></li>
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="contacto.html" id="contacto">Contacto</a></li>
-                <li><a href="acerca.html" id="Acerca-de">Acerca de</a></li>
+                <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
             </ul>
-
         </nav>
     </header>
 
@@ -97,8 +96,22 @@
         </div>
     </div>
 
-    <footer>
-        <p> &copy; 2025 NextLab. Todos los derechos reservados.</p>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h3>NextLab Concerts</h3>
+                    <p>Tu plataforma para experiencias musicales inolvidables.</p>
+                </div>
+                <div class="footer-contact">
+                    <h4>Contacto</h4>
+                    <p>info@nextlab.com<br>+503 2374-5678</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 NextLab Concerts. Todos los derechos reservados.</p>
+            </div>
+        </div>
     </footer>
 </body>
 
