Arreglo header y footer

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body class="dark-theme">
 
-    <header id="encabezado">
-    <nav class="navbar">
-            <img src="IMG/logo.png" alt="Logo NextLab" width="200" height="54" id="logo">
-            <ul>
+   <header class="header">
+        <nav class="navbar">
+            <div class="logo">NextLab</div>
+            <ul class="nav-menu">
                 <li><a href="index.html" id="inicio">Inicio</a></li>
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="contacto.html" id="contacto">Contacto</a></li>
