--- a/conciertos.html
+++ b/conciertos.html
@@ -6,6 +6,7 @@
     <title>Conciertos Destacados</title>
     <link rel="stylesheet" href="css/ConciertosDestacadosStyle.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header_footer.css">
 </head>
 
 <body>
