--- a/calendario.html
+++ b/calendario.html
@@ -7,6 +7,7 @@
     <title>Calendario de Eventos</title>
     <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/calendario.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 
