--- a/galeria.html
+++ b/galeria.html
@@ -7,6 +7,7 @@
     <title>Venta de Boletos de Conciertos</title>
     <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/galeria.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
