agregar fotos personales y mas fotos al carusel, junto con ajuste de fotos en acerca.html

--- a/acerca.html
+++ b/acerca.html
@@ -82,19 +82,19 @@
                     <!-- Miembro 1 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="" alt="">
+                            <img src="IMG/pao.jpeg" alt="">
                         </div>
                         <h3>Paola Guzmán</h3>
                         <p class="member-role">CEO & Fundadora</p>
                         <p class="member-bio">
-                            Apasionada por la música y la tecnología. 
+                            Apasionada por la música y las experiencias. "Solo se vive una vez" 
                         </p>
                     </div>
 
                     <!-- Miembro 2 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="" alt="">
+                            <img src="IMG/rodrigo.jpeg" alt="">
                         </div>
                         <h3>Rodrigo Quijada</h3>
                         <p class="member-role">Director de Operaciones</p>
@@ -106,7 +106,7 @@
                     <!-- Miembro 3 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="" alt="">
+                            <img src="IMG/mauri.png" alt="">
                         </div>
                         <h3>Mauricio Recinos</h3>
                         <p class="member-role">Desarrollador Web</p>
@@ -118,7 +118,7 @@
                     <!-- Miembro 4 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="" alt="">
+                            <img src="IMG/paco.jpeg" alt="">
                         </div>
                         <h3>Francisco Rauda</h3>
                         <p class="member-role">Community Manager</p>
