--- a/index.html
+++ b/index.html
@@ -38,27 +38,46 @@
                             aria-label="First slide"></li>
                         <li data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Second slide"></li>
                         <li data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Third slide"></li>
+                        <li data-bs-target="#carouselId" data-bs-slide-to="3" aria-label="Fourth slide"></li>
+                        <li data-bs-target="#carouselId" data-bs-slide-to="4" aria-label="Fifth slide"></li>
+                    
+                        
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img src="IMG/bad.png" class="w-100 d-block" alt="Concierto Bad Bunny" />
                             <div class="carousel-caption">
                                 <h3>BAD BUNNY</h3>
-                                <p>Vive una noche llena de energía y ritmo</p>
+                                <p>Dónde realmente vas a decir "DeBÍ TiRAR MáS FOToS"</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="IMG/ousi.png" class="w-100 d-block" alt="Concierto Ousi" />
                             <div class="carousel-caption">
                                 <h3>OUSI</h3>
-                                <p>Experiencia musical única</p>
+                                <p>No necesitas terapia, solo ver a Ousi en vivo</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="IMG/rawi.png" class="w-100 d-block" alt="Concierto Rawi" />
                             <div class="carousel-caption">
                                 <h3>RAWI</h3>
-                                <p>Lo mejor de la música urbana</p>
+                                <p>La banda más boleta de Venezuela en la actualidad </p>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="IMG/latin.png" class="w-100 d-block" alt="Concierto Rawi" />
+                            <div class="carousel-caption">
+                                <h3>LATIN MAFIA</h3>
+                                <p>Ven a cantar "Siento que merezco más" con el corazón en la mano</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="IMG/ferxxo.png" class="w-100 d-block" alt="Concierto Rawi" />
+                            <div class="carousel-caption">
+                                <h3>EL FERXXO</h3>
+                                <p>Lo mejor de la música urbana mor</p>
                             </div>
                         </div>
                     </div>
