Arreglos de enlaces
Se modificaron enlaces de archivos

--- a/pages/admin-dashboard.html
+++ b/pages/admin-dashboard.html
@@ -20,22 +20,22 @@
                 <div class="sidebar-nav">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="admin-dashboard.html">
+                            <a class="nav-link active" href="/pages/admin-dashboard.html">
                                 📊 Dashboard
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gestion-conciertos.html">
+                            <a class="nav-link" href="/pages/gestion-conciertos.html">
                                 🎤 Gestionar Conciertos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gestion-usuario.html">
+                            <a class="nav-link" href="/pages/gestion-usuario.html">
                                 👥 Gestionar Usuarios
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ventas.html">
+                            <a class="nav-link" href="/pages/ventas.html">
                                 💰 Ventas
                             </a>
                         </li>
