--- a/pages/compra-cliente.html
+++ b/pages/compra-cliente.html
@@ -20,22 +20,22 @@
                 <div class="sidebar-nav">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">
+                            <a class="nav-link" href="/index.html">
                                 🏠 Inicio
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="conciertos.html">
+                            <a class="nav-link" href="/pages/conciertos.html">
                                 🎵 Conciertos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="compra-cliente.html">
+                            <a class="nav-link active" href="/pages/compra-cliente.html">
                                 🎫 Comprar Boletos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="admin-login.html">
+                            <a class="nav-link" href="/pages/admin-login.html">
                                 🔐 Admin
                             </a>
                         </li>
