--- a/pages/admin-login.html
+++ b/pages/admin-login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login - NextLab</title>
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="/css/admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="admin-login-body">
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <script type="module" src="js/adminLogin.js"></script>
+    <script type="module" src="/js/adminLogin.js"></script>
 </body>
 </html>
