--- a/pages/gestion-usuario.html
+++ b/pages/gestion-usuario.html
@@ -20,22 +20,22 @@
                 <div class="sidebar-nav">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="admin-dashboard.html">
+                            <a class="nav-link" href="/pages/admin-dashboard.html">
                                 📊 Dashboard
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gestion-conciertos.html">
+                            <a class="nav-link" href="/pages/gestion-conciertos.html">
                                 🎤 Gestionar Conciertos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="gestion-usuario.html">
+                            <a class="nav-link active" href="/pages/gestion-usuario.html">
                                 👥 Gestionar Usuarios
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ventas.html">
+                            <a class="nav-link" href="/pages/ventas.html">
                                 💰 Ventas
                             </a>
                         </li>
@@ -167,6 +167,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Script separado -->
-    <script type="module" src="js/gestion-usuarios.js"></script>
+    <script type="module" src="js/gestionUsuario.js"></script>
 </body>
 </html>
