--- a/pages/admin-login.html
+++ b/pages/admin-login.html
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <script type="module" src="/js/adminLogin.js"></script>
+    <script type="module" src="js/adminLogin.js"></script>
 </body>
 </html>
