--- a/pages/compra-cliente.html
+++ b/pages/compra-cliente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comprar Boletos - NextLab</title>
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="/css/admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="admin-dashboard">
@@ -25,17 +25,17 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/conciertos.html">
+                            <a class="nav-link" href="conciertos.html">
                                 🎵 Conciertos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/pages/compra-cliente.html">
+                            <a class="nav-link active" href="compra-cliente.html">
                                 🎫 Comprar Boletos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/admin-login.html">
+                            <a class="nav-link" href="admin-login.html">
                                 🔐 Admin
                             </a>
                         </li>
@@ -141,6 +141,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Script separado -->
-    <script type="module" src="js/compra-cliente.js"></script>
+    <script type="module" src="js/compraCliente.js"></script>
 </body>
 </html>
