--- a/pages/gestion-conciertos.html
+++ b/pages/gestion-conciertos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Conciertos - NextLab</title>
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="/css/admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="admin-dashboard">
@@ -20,22 +20,22 @@
                 <div class="sidebar-nav">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/admin-dashboard.html">
+                            <a class="nav-link" href="admin-dashboard.html">
                                 📊 Dashboard
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/pages/gestion-conciertos.html">
+                            <a class="nav-link active" href="gestion-conciertos.html">
                                 🎤 Gestionar Conciertos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/gestion-usuario.html">
+                            <a class="nav-link" href="gestion-usuario.html">
                                 👥 Gestionar Usuarios
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/ventas.html">
+                            <a class="nav-link" href="ventas.html">
                                 💰 Ventas
                             </a>
                         </li>
