--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de - NextLab</title>
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="../css/style1.css">
     <link rel="stylesheet" href="">
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar">
             <div class="logo">NextLab</div>
             <ul class="nav-menu">
-                <li><a href="index.html" id="inicio">Inicio</a></li>
+                <li><a href="../index.html" id="inicio">Inicio</a></li>
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="contacto.html" id="contacto">Contacto</a></li>
                 <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <main class="main-content">
         <div class="container">
             <!-- Hero Section -->
@@ -35,8 +37,10 @@
                 <div class="history-card">
                     <h2>Nuestra Historia</h2>
                     <p>
-                        NextLab Concerts nació en 2022 de la pasión por conectar a los amantes de la música con experiencias 
-                        inolvidables. Lo que comenzó como un pequeño proyecto entre amigos, hoy es la plataforma líder en 
+                        NextLab Concerts nació en 2022 de la pasión por conectar a los amantes de la música con
+                        experiencias
+                        inolvidables. Lo que comenzó como un pequeño proyecto entre amigos, hoy es la plataforma líder
+                        en
                         venta de boletos para conciertos y eventos en El Salvador.
                     </p>
                 </div>
@@ -50,7 +54,7 @@
                         <div class="value-icon">🎯</div>
                         <h3>Misión</h3>
                         <p>
-                            Conectar a las personas con experiencias musicales únicas through tecnología innovadora 
+                            Conectar a las personas con experiencias musicales únicas through tecnología innovadora
                             y servicio excepcional.
                         </p>
                     </div>
@@ -59,7 +63,7 @@
                         <div class="value-icon">👁️</div>
                         <h3>Visión</h3>
                         <p>
-                            Ser la plataforma preferida para experiencias musicales en El Salvador, reconocida por 
+                            Ser la plataforma preferida para experiencias musicales en El Salvador, reconocida por
                             nuestra calidad y innovación.
                         </p>
                     </div>
@@ -68,7 +72,7 @@
                         <div class="value-icon">💎</div>
                         <h3>Valores</h3>
                         <p>
-                            Pasión por la música, innovación constante, servicio al cliente excepcional y compromiso 
+                            Pasión por la música, innovación constante, servicio al cliente excepcional y compromiso
                             con la comunidad.
                         </p>
                     </div>
@@ -82,19 +86,19 @@
                     <!-- Miembro 1 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="IMG/pao.jpeg" alt="">
+                            <img src="../IMG/pao.jpeg" alt="">
                         </div>
                         <h3>Paola Guzmán</h3>
                         <p class="member-role">CEO & Fundadora</p>
                         <p class="member-bio">
-                            Apasionada por la música y las experiencias. "Solo se vive una vez" 
+                            Apasionada por la música y las experiencias. "Solo se vive una vez"
                         </p>
                     </div>
 
                     <!-- Miembro 2 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="IMG/rodrigo.jpeg" alt="">
+                            <img src="../IMG/rodrigo.jpeg" alt="">
                         </div>
                         <h3>Rodrigo Quijada</h3>
                         <p class="member-role">Director de Operaciones</p>
@@ -106,7 +110,7 @@
                     <!-- Miembro 3 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="IMG/mauri.png" alt="">
+                            <img src="../IMG/mauri.png" alt="">
                         </div>
                         <h3>Mauricio Recinos</h3>
                         <p class="member-role">Desarrollador Web</p>
@@ -118,7 +122,7 @@
                     <!-- Miembro 4 -->
                     <div class="team-card">
                         <div class="member-photo">
-                            <img src="IMG/paco.jpeg" alt="">
+                            <img src="../IMG/paco.jpeg" alt="">
                         </div>
                         <h3>Francisco Rauda</h3>
                         <p class="member-role">Community Manager</p>
@@ -149,4 +153,5 @@
         </div>
     </footer>
 </body>
+
 </html>
