--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario de Eventos</title>
-    <link rel="stylesheet" href="css/header_footer.css">
-    <link rel="stylesheet" href="css/calendario.css">
-    <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="../css/header_footer.css">
+    <link rel="stylesheet" href="../css/calendario.css">
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 
 <body>
-     <header class="header">
+    <header class="header">
         <nav class="navbar">
             <div class="logo">NextLab</div>
             <ul class="nav-menu">
-                <li><a href="index.html" id="inicio">Inicio</a></li>
+                <li><a href="../index.html" id="inicio">Inicio</a></li>
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="contacto.html" id="contacto">Contacto</a></li>
                 <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
