--- a/pages/compra-cliente.html
+++ b/pages/compra-cliente.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comprar Boletos - NextLab</title>
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="../css/admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="admin-dashboard">
     <div class="dashboard-container">
         <!-- Sidebar simplificado para clientes -->
@@ -16,11 +18,11 @@
                     <h4>🎵 NextLab</h4>
                     <small>Tienda de Conciertos</small>
                 </div>
-                
+
                 <div class="sidebar-nav">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">
+                            <a class="nav-link" href="../index.html">
                                 🏠 Inicio
                             </a>
                         </li>
@@ -109,19 +111,19 @@
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Número de Tarjeta</label>
-                                    <input type="text" class="form-control" id="numeroTarjeta" 
-                                           placeholder="1234 5678 9012 3456" required maxlength="19">
+                                    <input type="text" class="form-control" id="numeroTarjeta"
+                                        placeholder="1234 5678 9012 3456" required maxlength="19">
                                 </div>
                                 <div class="row">
                                     <div class="col-6">
                                         <label class="form-label">Fecha Expiración</label>
-                                        <input type="text" class="form-control" id="fechaExpiracion" 
-                                               placeholder="MM/AA" required maxlength="5">
+                                        <input type="text" class="form-control" id="fechaExpiracion" placeholder="MM/AA"
+                                            required maxlength="5">
                                     </div>
                                     <div class="col-6">
                                         <label class="form-label">CVV</label>
-                                        <input type="text" class="form-control" id="cvv" 
-                                               placeholder="123" required maxlength="3">
+                                        <input type="text" class="form-control" id="cvv" placeholder="123" required
+                                            maxlength="3">
                                     </div>
                                 </div>
                             </div>
@@ -141,6 +143,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Script separado -->
-    <script type="module" src="js/compraCliente.js"></script>
+    <script type="module" src="../js/compraCliente.js" defer></script>
 </body>
+
 </html>
