--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venta de Boletos de Conciertos</title>
-    <link rel="stylesheet" href="css/header_footer.css">
-    <link rel="stylesheet" href="css/galeria.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/header_footer.css">
+    <link rel="stylesheet" href="../css/galeria.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <div class="logo">NextLab</div>
             <ul class="nav-menu">
-                <li><a href="index.html" id="inicio">Inicio</a></li>
+                <li><a href="../index.html" id="inicio">Inicio</a></li>
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="contacto.html" id="contacto">Contacto</a></li>
                 <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
@@ -29,55 +29,55 @@
         <div class="galeria">
 
             <div class="concierto">
-                <img src="IMG/Galeria/Feid.jpg" alt="1">
+                <img src="../IMG/Galeria/Feid.jpg" alt="1">
                 <h3>Feid</h3>
                 <p>Fecha: 8 de Septiembre del 2024</p>
                 <p>Lugar: Estadio Jorge Mágico González</p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Bad_bunny.webp" alt="2">
+                <img src="../IMG/Galeria/Bad_bunny.webp" alt="2">
                 <h3>Bad Bunny</h3>
                 <p>Fecha: 26 de Noviembre del 2022</p>
                 <p>Lugar: Estadio Cuscatlán</p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Luis_miguel.jpg" alt="3">
+                <img src="../IMG/Galeria/Luis_miguel.jpg" alt="3">
                 <h3>Luis Miguel</h3>
                 <p>Fecha: 30 de Enero del 2024</p>
                 <p>Lugar: Estadio Cuscatlán </p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Rawayana.jpg" alt="4">
+                <img src="../IMG/Galeria/Rawayana.jpg" alt="4">
                 <h3>Rawayana</h3>
                 <p>Fecha: 5 de Abril del 2025</p>
                 <p>Lugar: Parque Nacional de Pelota Saturnino Bengoa</p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Residente.jpg" alt="5">
+                <img src="../IMG/Galeria/Residente.jpg" alt="5">
                 <h3>Residente</h3>
                 <p>Fecha: 24 de Noviembre del 2024</p>
                 <p>Lugar: Parque Nacional de Pelota Saturnino Bengoa.</p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Daddy_yankee.jpg" alt="6">
+                <img src="../IMG/Galeria/Daddy_yankee.jpg" alt="6">
                 <h3>Daddy Yankee</h3>
                 <p>Fecha: 5 de Noviembre del 2022</p>
                 <p>Lugar: Estadio Cuscatlán</p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Danny_ocean.jpg" alt="7">
+                <img src="../IMG/Galeria/Danny_ocean.jpg" alt="7">
                 <h3>Danny Ocean</h3>
                 <p>Fecha: 21 de Mayo del 2022</p>
                 <p>Lugar: Complejo Deportivo la Hacienda</p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Alejandro_sanz.jpg" alt="8">
+                <img src="../IMG/Galeria/Alejandro_sanz.jpg" alt="8">
                 <h3>Alejandro Sanz</h3>
                 <p>Fecha: 14 de Mayo del 2022</p>
                 <p>Lugar: Estadio Cuscatlán</p>
             </div>
             <div class="concierto">
-                <img src="IMG/Galeria/Mora.jpg" alt="9">
+                <img src="../IMG/Galeria/Mora.jpg" alt="9">
                 <h3>Mora</h3>
                 <p>Fecha: 4 de Julio del 2025</p>
                 <p>Lugar: Complejo Deportivo Cuscatlán</p>
