--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ofertas - NextLab</title>
-    <link rel="stylesheet" href="css/style2.css">
-     <link rel="stylesheet" href="css/header_footer">
+    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/header_footer">
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar">
             <div class="logo">NextLab</div>
             <ul class="nav-menu">
-                <li><a href="index.html" id="inicio">Inicio</a></li>
+                <li><a href="../index.html" id="inicio">Inicio</a></li>
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="contacto.html" id="contacto">Contacto</a></li>
                 <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
@@ -25,7 +27,8 @@
             <!-- Hero Section -->
             <section class="hero">
                 <h1 class="hero-title">Ofertas y Paquetes Especiales</h1>
-                <p class="hero-subtitle">Descubre nuestras promociones exclusivas, descuentos y paquetes para vivir experiencias musicales únicas</p>
+                <p class="hero-subtitle">Descubre nuestras promociones exclusivas, descuentos y paquetes para vivir
+                    experiencias musicales únicas</p>
             </section>
 
             <!-- Promociones Destacadas -->
@@ -337,4 +340,5 @@
         </div>
     </footer>
 </body>
+
 </html>
