--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ventas - NextLab</title>
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="../css/admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="admin-dashboard">
     <div class="dashboard-container">
         <!-- Sidebar -->
@@ -16,7 +18,7 @@
                     <h4>🎵 NextLab</h4>
                     <small>Panel Administrativo</small>
                 </div>
-                
+
                 <div class="sidebar-nav">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -126,6 +128,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Script separado -->
-    <script type="module" src="js/ventas.js"></script>
+    <script type="module" src="../js/ventas.js" defer></script>
 </body>
+
 </html>
