--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,6 +19,7 @@
                 <li><a href="galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="contacto.html" id="contacto">Contacto</a></li>
                 <li><a href="acerca.html" id="acerca-de">Acerca de</a></li>
+                <li><a href="login.html" id="acerca-de">Ingresar</a></li>
             </ul>
         </nav>
     </header>
