--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <li><a href="pages/galeria.html" id="galeria">Galeria</a></li>
                 <li><a href="pages/contacto.html" id="contacto">Contacto</a></li>
                 <li><a href="pages/acerca.html" id="acerca-de">Acerca de</a></li>
+                <li><a href="pages/login.html" id="acerca-de">Ingresar</a></li>
+
             </ul>
         </nav>
     </header>
@@ -155,6 +157,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
