--- a/pages/gestion-usuario.html
+++ b/pages/gestion-usuario.html
@@ -99,6 +99,7 @@
                             <thead>
                                 <tr>
                                     <th>Email</th>
+                                    <th>Nombre</th>
                                     <th>Tipo</th>
                                     <th>Fecha Registro</th>
                                     <th>Acciones</th>
@@ -160,6 +161,50 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     <button type="button" class="btn btn-primary" onclick="crearUsuario()">Crear Usuario</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Editar Usuario -->
+    <div class="modal fade" id="editarUsuarioModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">✏️ Editar Usuario</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="formEditarUsuario">
+                        <input type="hidden" id="editUsuarioId">
+
+                        <div class="form-group mb-3">
+                            <label class="form-label">Email del Usuario</label>
+                            <input type="email" class="form-control" id="editEmailUsuario" readonly>
+                            <small class="help-text text-muted">El email no se puede modificar por seguridad</small>
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label class="form-label">Nombre Completo</label>
+                            <input type="text" class="form-control" id="editNombreUsuario"
+                                placeholder="Ej: Juan Pérez García">
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label class="form-label">Tipo de Usuario</label>
+                            <select class="form-select" id="editTipoUsuario" required>
+                                <option value="empleado">Empleado</option>
+                                <option value="admin">Administrador</option>
+                                <option value="cliente">Cliente</option>
+                            </select>
+                            <small class="help-text text-muted">Cambiar los permisos del usuario en el sistema</small>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" onclick="guardarEdicionUsuario()">
+                        Guardar Cambios
+                    </button>
                 </div>
             </div>
         </div>
